[TASK] Code cleanup

--- a/Resources/Private/Partials/Types/File.html
+++ b/Resources/Private/Partials/Types/File.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
+<html lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
 <tcafe:fal data="{tcafe:getDataFromRow(row: row)}" field="{field.name}" table="{configuration.table}" as="files">
     <f:for each="{files}" as="file">
         <f:switch expression="{file.type}">
