--- a/Resources/Private/Partials/Types/Relation.html
+++ b/Resources/Private/Partials/Types/Relation.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
+<html lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
 <tcafe:relation uidLocal="{row.uid.value}" table="{configuration.table}" foreignFieldName="{field.name}" foreignFieldValue="{field.value}" foreignTableSelectFields="{field.config.fields}" sorting="{field.config.sorting}">
     <f:for each="{records}" as="record">
         <dl class="border-bottom">
