--- a/Resources/Private/Partials/Filter/Checkbox.html
+++ b/Resources/Private/Partials/Filter/Checkbox.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<html lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <div class="form-group">
     <label for="filter-{id}">
         <f:if condition="{filter.label}">
