--- a/Resources/Private/Partials/List/Table/Head.html
+++ b/Resources/Private/Partials/List/Table/Head.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<html lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
     <thead>
         <tr>
             <f:for each="{row0}" as="field">
