--- a/Resources/Private/Partials/Types/File/Document.html
+++ b/Resources/Private/Partials/Types/File/Document.html
@@ -1,3 +1,3 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
+<html lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:link.typolink parameter="t3://file?uid={file.originalFile.uid}"><tcafe:typolinkFileTitle value="t3://file?uid={file.originalFile.uid}"/></f:link.typolink>
 </html>
