--- a/Resources/Private/Partials/Types/RichText.html
+++ b/Resources/Private/Partials/Types/RichText.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<html lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:if condition="{field.config.crop}">
     <f:then>
         <f:format.crop maxCharacters="{field.config.crop.maxCharacters}"><f:format.html>{field.value}</f:format.html></f:format.crop>
