--- a/Resources/Private/Templates/Filter.html
+++ b/Resources/Private/Templates/Filter.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<html lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:if condition="{filters}">
     <f:form class="form mb-4" action="filter">
         <f:for each="{filters}" as="filter" iteration="it">
