--- a/Resources/Private/Templates/List.html
+++ b/Resources/Private/Templates/List.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<html lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:render partial="List/Table" arguments="{_all}" />
 <f:render partial="Pagination/Pagination" arguments="{currentPage: currentPage, pagination: pagination, action: action}" />
 </html>
