--- a/Resources/Private/Templates/Filter.html
+++ b/Resources/Private/Templates/Filter.html
@@ -1,13 +1,6 @@
 <html lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<f:if condition="{filters}">
-    <f:form class="form mb-4" action="filter">
-        <f:for each="{filters}" as="filter" iteration="it">
-            <f:variable name="filterValue">{filterValues.{it.index}}</f:variable>
-            <f:render partial="Filter/{filter.config.type}" arguments="{filter: filter.config, id: it.index, value: filterValue, sortField: sortField, sort: sort}" />
-        </f:for>
-        <f:form.submit value="Submit" class="btn btn-primary" />
-    </f:form>
-</f:if>
+
+<f:render partial="Filter/Filter" arguments="{_all}" />
 <f:render partial="List/Table" arguments="{_all}" />
 <f:render partial="Pagination/Pagination" arguments="{currentPage: currentPage, pagination: pagination, filterValues: filterValues, sortField: sortField, sort: sort}" />
 </html>
